Use IfNotPresent for mcp image

--- a/charts/trento-server/charts/trento-mcp-server/values.yaml
+++ b/charts/trento-server/charts/trento-mcp-server/values.yaml
@@ -9,7 +9,7 @@
 image:
   repository: ghcr.io/trento-project/trento-mcp-server
   tag: 1.0.0
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 ## @param replicaCount Number of replicas to deploy
 replicaCount: 1
