Use mcp correct image name

--- a/packaging/suse/trento-server/values-overwrite.yaml
+++ b/packaging/suse/trento-server/values-overwrite.yaml
@@ -8,3 +8,7 @@ trento-wanda:
   checks:
     image:
       repository: registry.suse.com/trento/trento-checks
+
+trento-mcp-server:
+  image:
+    repository: registry.suse.com/trento/mcp-server-trento
