Add middlewares in trento-web to support serving it from a subpath
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/charts/trento-web/templates/ingress.yaml
+++ b/charts/trento-server/charts/trento-web/templates/ingress.yaml
@@ -22,8 +22,8 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
     {{- if eq $.Values.ingress.className "traefik" }}
-    # This middleware makes sure that the /api/session/token/introspect endpoint is not accessible
-    traefik.ingress.kubernetes.io/router.middlewares: {{ $.Release.Namespace }}-{{ include "trento-web.fullname" $ }}-no-introspection@kubernetescrd
+    # Middlewares: block introspect, strip /trento prefix, and set X-Forwarded-Prefix header
+    traefik.ingress.kubernetes.io/router.middlewares: {{ $.Release.Namespace }}-{{ include "trento-web.fullname" $ }}-no-introspection@kubernetescrd,{{ $.Release.Namespace }}-{{ include "trento-web.fullname" $ }}-strip-trento@kubernetescrd,{{ $.Release.Namespace }}-{{ include "trento-web.fullname" $ }}-set-prefix-header@kubernetescrd
     {{- end }}
   {{- end }}
 spec:
