Make values of alerting settings as strings in ConfigMap

--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -7,22 +7,22 @@ data:
   EVENTSTORE_URL: "ecto://{{ .Values.global.postgresql.postgresqlUsername }}:{{ .Values.global.postgresql.postgresqlPassword }}@{{ .Release.Name }}-{{ .Values.global.postgresql.name }}/trento_event_store"
   {{- with .Values.alerting }}
   {{- if not (eq .enabled nil) }}
-  ENABLE_ALERTING: {{ .enabled }}
+  ENABLE_ALERTING: "{{ .enabled }}"
   {{- end }}
   {{- if not (eq .smtpServer nil) }}
-  SMTP_SERVER: {{ .smtpServer }}
+  SMTP_SERVER: "{{ .smtpServer }}"
   {{- end }}
   {{- if not (eq .smtpPort nil) }}
-  SMTP_PORT: {{ .smtpPort }}
+  SMTP_PORT: "{{ .smtpPort }}"
   {{- end }}
   {{- if not (eq .smtpUser nil) }}
-  SMTP_USER: {{ .smtpUser }}
+  SMTP_USER: "{{ .smtpUser }}"
   {{- end }}
   {{- if not (eq .sender nil) }}
-  ALERT_SENDER: {{ .sender }}
+  ALERT_SENDER: "{{ .sender }}"
   {{- end }}
   {{- if not (eq .recipient nil) }}
-  ALERT_RECIPIENT: {{ .recipient }}
+  ALERT_RECIPIENT: "{{ .recipient }}"
   {{- end }}
   {{- end }}
   PROMETHEUS_URL: "http://{{ .Release.Name }}-{{ .Values.global.prometheus.name }}"
