--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -25,7 +25,7 @@ data:
   ALERT_RECIPIENT: "{{ .recipient }}"
   {{- end }}
   {{- end }}
-  PROMETHEUS_URL: "http://{{ .Release.Name }}-{{ .Values.global.prometheus.name }}"
+  PROMETHEUS_URL: "http://{{ .Release.Name }}-{{ .Values.global.prometheus.name }}/prometheus"
   {{- if .Values.global.rabbitmq.tls.mtls.enabled }}
   AMQP_URL: "amqps://{{ .Values.global.rabbitmq.auth.username }}:{{ .Values.global.rabbitmq.auth.password }}@{{ .Release.Name }}-{{ .Values.global.rabbitmq.name }}:{{ .Values.global.rabbitmq.ports.amqpTls }}?cacertfile=/etc/certs/rabbitmq/ca.crt&certfile=/etc/certs/rabbitmq/tls.crt&keyfile=/etc/certs/rabbitmq/tls.key"
   {{- else }}
