--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -69,32 +69,30 @@ prometheus:
     enabled: true
     image:
       tag: v2.51.0
+    prefixURL: "/prometheus"
     extraFlags:
       - web.enable-remote-write-receiver
     extraConfigmapMounts:
     configMapOverrideName: prometheus-configmap
-    # Ingress is disabled here; we use a custom ingress in templates/prometheus-ingress.yaml
     ingress:
-      enabled: false
+      enabled: true
+      ingressClassName: traefik
+      annotations:
+        kubernetes.io/tls-acme: "true"
+      traefikMiddlewares:
+        - prometheus-basic-auth
+      hosts: []
+      path: /prometheus
+      pathType: Prefix
+      tls: []
   serverFiles:
     prometheus.yml: {}
 
-  # Custom ingress configuration for remote write endpoint
-  # Only exposes the remote write endpoint externally
-  # All other Prometheus endpoints remain accessible internally via ClusterIP service
   prometheusIngress:
-    enabled: true
-    ingressClassName: traefik
-    annotations:
-      kubernetes.io/tls-acme: "true"
-    hosts: []
-    path: /prometheus/api/v1/write
-    pathType: Exact
-    tls: []
     auth:
       enabled: true
-      username: ""  # Required when auth.enabled is true
-      password: ""  # Required when auth.enabled is true
+      username: ""   # Required when auth.enabled is true
+      password: ""   # Required when auth.enabled is true
 
   alertmanager:
     enabled: false
